fixed some issues when opening on iphone brwoser

--- a/components/misc/styles/Filter.module.scss
+++ b/components/misc/styles/Filter.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   gap: 0;
+  border-radius: 25px;
 
   .input {
     height: 50px;
@@ -17,8 +18,10 @@
   .location {
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     border-right-width: 0;
-    flex: 2;
+    flex: 1.5;
   }
 
   .date {
