--- a/components/misc/styles/SportFilter.module.scss
+++ b/components/misc/styles/SportFilter.module.scss
@@ -2,6 +2,7 @@
   width: calc(100% + 1em + 1em);
   margin-left: -1em;
   margin-right: -1em;
+
   .wrapper {
     display: flex;
     flex-direction: row;
@@ -9,13 +10,22 @@
     padding: 0.5em 0;
     gap: 0.5em;
     width: 100%;
+
+    /* Handling scrolling */
     overflow-x: scroll;
+    padding-bottom: 10px;
+    clip-path: inset(0 0 3px 0);
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     div:first-of-type {
       margin-left: 1em;
     }
-    
-    div:last-of-type {
+
+    :last-child {
       margin-right: 1em;
     }
   }
